feat: add public competition ranking
